# thtk-Unpack_All_in_One

./: .gitignore  README.md  main.py  pixi.toml  pyproject.toml  shift_jis_to_utf-8.py  thbgm.py  transBFA.py  transDialogue.py  一键解包.bat  点击清空解包文件.bat
data/: README.md
dialogue/: README.md  end00.txt  end01.txt  end02.txt  end03.txt  end04.txt  end05.txt  end06.txt  end07.txt  end08.txt  end09.txt  end10.txt  end11.txt  end12.txt  end13.txt  end14.txt  end15.txt  end16.txt  end17.txt  end18.txt  pl00st.txt  pl00vs.txt  pl01st.txt  pl01vs.txt  pl02st.txt  pl02vs.txt  pl03st.txt  pl03vs.txt  pl04st.txt  pl04vs.txt  pl05st.txt  pl05vs.txt  pl06st.txt  pl06vs.txt  pl07st.txt  pl07vs.txt  pl08st.txt  pl08vs.txt  pl09st.txt  pl09vs.txt  (+18 more)
spellcard/: README.md
th19/: README.md
thtk/: NEWS.txt  README.thanm.old.txt  README.thanm.txt  README.thdat.txt  README.thecl.txt  README.thmsg.txt  README.thstd.txt  thtk.lib
